deps/FNA/lib/MojoShader/csharp/MojoShader.cs

#region License
/* MojoShader# - C# Wrapper for MojoShader
 *
 * Copyright (c) 2014-2017 Ethan Lee.
 *
 * This software is provided 'as-is', without any express or implied warranty.
 * In no event will the authors be held liable for any damages arising from
 * the use of this software.
 *
 * Permission is granted to anyone to use this software for any purpose,
 * including commercial applications, and to alter it and redistribute it
 * freely, subject to the following restrictions:
 *
 * 1. The origin of this software must not be misrepresented; you must not
 * claim that you wrote the original software. If you use this software in a
 * product, an acknowledgment in the product documentation would be
 * appreciated but is not required.
 *
 * 2. Altered source versions must be plainly marked as such, and must not be
 * misrepresented as being the original software.
 *
 * 3. This notice may not be removed or altered from any source distribution.
 *
 * Ethan "flibitijibibo" Lee <flibitijibibo@flibitijibibo.com>
 *
 */
#endregion

#region Using Statements
using System;
using System.Runtime.InteropServices;
#endregion

public static class MojoShader
{
	#region Native Library Name

	private const string nativeLibName = "mojoshader";

	#endregion

	#region UTF8 Marshaling

	private static byte[] UTF8_ToNative(string s)
	{
		if (s == null)
		{
			return null;
		}

		// Add a null terminator. That's kind of it... :/
		return System.Text.Encoding.UTF8.GetBytes(s + '\0');
	}

	private static unsafe string UTF8_ToManaged(IntPtr s)
	{
		if (s == IntPtr.Zero)
		{
			return null;
		}

		/* We get to do strlen ourselves! */
		byte* ptr = (byte*) s;
		while (*ptr != 0)
		{
			ptr++;
		}

		/* TODO: This #ifdef is only here because the equivalent
		 * .NET 2.0 constructor appears to be less efficient?
		 * Here's the pretty version, maybe steal this instead:
		 *
		string result = new string(
			(sbyte*) s, // Also, why sbyte???
			0,
			(int) (ptr - (byte*) s),
			System.Text.Encoding.UTF8
		);
		 * See the CoreCLR source for more info.
		 * -flibit
		 */
#if NETSTANDARD2_0
		/* Modern C# lets you just send the byte*, nice! */
		string result = System.Text.Encoding.UTF8.GetString(
			(byte*) s,
			(int) (ptr - (byte*) s)
		);
#else
		/* Old C# requires an extra memcpy, bleh! */
		int len = (int) (ptr - (byte*) s);
		char* chars = stackalloc char[len];
		int strLen = System.Text.Encoding.UTF8.GetChars((byte*) s, len, chars, len);
		string result = new string(chars, 0, strLen);
#endif
		return result;
	}

	#endregion

	#region Version Interface

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern int MOJOSHADER_version();

	/* IntPtr refers to a statically allocated const char* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern IntPtr MOJOSHADER_changeset();

	#endregion

	#region Custom malloc/free Function Types

	/* data refers to a void* */
	public delegate IntPtr MOJOSHADER_malloc(int bytes, IntPtr data);

	/* ptr refers to a void, data to a void* */
	public delegate IntPtr MOJOSHADER_free(IntPtr ptr, IntPtr data);

	#endregion

	#region Parse Interface

	public enum MOJOSHADER_shaderType
	{
		MOJOSHADER_TYPE_UNKNOWN =	0,
		MOJOSHADER_TYPE_PIXEL =		(1 << 0),
		MOJOSHADER_TYPE_VERTEX =	(1 << 1),
		MOJOSHADER_TYPE_GEOMETRY =	(1 << 2),
		MOJOSHADER_TYPE_ANY =		-1 // 0xFFFFFFFF, ugh
	}

	public enum MOJOSHADER_attributeType
	{
		MOJOSHADER_ATTRIBUTE_UNKNOWN = -1,
		MOJOSHADER_ATTRIBUTE_BYTE,
		MOJOSHADER_ATTRIBUTE_UBYTE,
		MOJOSHADER_ATTRIBUTE_SHORT,
		MOJOSHADER_ATTRIBUTE_USHORT,
		MOJOSHADER_ATTRIBUTE_INT,
		MOJOSHADER_ATTRIBUTE_UINT,
		MOJOSHADER_ATTRIBUTE_FLOAT,
		MOJOSHADER_ATTRIBUTE_DOUBLE,
		MOJOSHADER_ATTRIBUTE_HALF_FLOAT
	}

	public enum MOJOSHADER_uniformType
	{
		MOJOSHADER_UNIFORM_UNKNOWN = -1,
		MOJOSHADER_UNIFORM_FLOAT,
		MOJOSHADER_UNIFORM_INT,
		MOJOSHADER_UNIFORM_BOOL
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_uniform
	{
		public MOJOSHADER_uniformType type;
		public int index;
		public int array_count;
		public int constant;
		public IntPtr name; // const char*
	}

	[StructLayout(LayoutKind.Explicit)]
	public unsafe struct MOJOSHADER_constant
	{
		[FieldOffset(0)]
			public MOJOSHADER_uniformType type;
		[FieldOffset(4)]
			public int index;
		[FieldOffset(8)]
			public fixed float f[4];
		[FieldOffset(8)]
			public fixed int i[4];
		[FieldOffset(8)]
			public int b;
	}

	public enum MOJOSHADER_samplerType
	{
		MOJOSHADER_SAMPLER_UNKNOWN = -1,
		MOJOSHADER_SAMPLER_2D,
		MOJOSHADER_SAMPLER_CUBE,
		MOJOSHADER_SAMPLER_VOLUME
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_sampler
	{
		public MOJOSHADER_samplerType type;
		public int index;
		public IntPtr name; // const char*
		public int texbem;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_samplerMap
	{
		public int index;
		public MOJOSHADER_samplerType type;
	}

	public enum MOJOSHADER_usage
	{
		MOJOSHADER_USAGE_UNKNOWN = -1,
		MOJOSHADER_USAGE_POSITION,
		MOJOSHADER_USAGE_BLENDWEIGHT,
		MOJOSHADER_USAGE_BLENDINDICES,
		MOJOSHADER_USAGE_NORMAL,
		MOJOSHADER_USAGE_POINTSIZE,
		MOJOSHADER_USAGE_TEXCOORD,
		MOJOSHADER_USAGE_TANGENT,
		MOJOSHADER_USAGE_BINORMAL,
		MOJOSHADER_USAGE_TESSFACTOR,
		MOJOSHADER_USAGE_POSITIONT,
		MOJOSHADER_USAGE_COLOR,
		MOJOSHADER_USAGE_FOG,
		MOJOSHADER_USAGE_DEPTH,
		MOJOSHADER_USAGE_SAMPLE,
		MOJOSHADER_USAGE_TOTAL
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_attribute
	{
		public MOJOSHADER_usage usage;
		public int index;
		public IntPtr name; // const char*
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct MOJOSHADER_swizzle
	{
		public MOJOSHADER_usage usage;
		public uint index;
		public fixed byte swizzles[4];
	}

	public enum MOJOSHADER_symbolRegisterSet
	{
		MOJOSHADER_SYMREGSET_BOOL = 0,
		MOJOSHADER_SYMREGSET_INT4,
		MOJOSHADER_SYMREGSET_FLOAT4,
		MOJOSHADER_SYMREGSET_SAMPLER,
		MOJOSHADER_SYMREGSET_TOTAL
	}

	public enum MOJOSHADER_symbolClass
	{
		MOJOSHADER_SYMCLASS_SCALAR = 0,
		MOJOSHADER_SYMCLASS_VECTOR,
		MOJOSHADER_SYMCLASS_MATRIX_ROWS,
		MOJOSHADER_SYMCLASS_MATRIX_COLUMNS,
		MOJOSHADER_SYMCLASS_OBJECT,
		MOJOSHADER_SYMCLASS_STRUCT,
		MOJOSHADER_SYMCLASS_TOTAL
	}

	public enum MOJOSHADER_symbolType
	{
		MOJOSHADER_SYMTYPE_VOID = 0,
		MOJOSHADER_SYMTYPE_BOOL,
		MOJOSHADER_SYMTYPE_INT,
		MOJOSHADER_SYMTYPE_FLOAT,
		MOJOSHADER_SYMTYPE_STRING,
		MOJOSHADER_SYMTYPE_TEXTURE,
		MOJOSHADER_SYMTYPE_TEXTURE1D,
		MOJOSHADER_SYMTYPE_TEXTURE2D,
		MOJOSHADER_SYMTYPE_TEXTURE3D,
		MOJOSHADER_SYMTYPE_TEXTURECUBE,
		MOJOSHADER_SYMTYPE_SAMPLER,
		MOJOSHADER_SYMTYPE_SAMPLER1D,
		MOJOSHADER_SYMTYPE_SAMPLER2D,
		MOJOSHADER_SYMTYPE_SAMPLER3D,
		MOJOSHADER_SYMTYPE_SAMPLERCUBE,
		MOJOSHADER_SYMTYPE_PIXELSHADER,
		MOJOSHADER_SYMTYPE_VERTEXSHADER,
		MOJOSHADER_SYMTYPE_PIXELFRAGMENT,
		MOJOSHADER_SYMTYPE_VERTEXFRAGMENT,
		MOJOSHADER_SYMTYPE_UNSUPPORTED,
		MOJOSHADER_SYMTYPE_TOTAL
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_symbolTypeInfo
	{
		public MOJOSHADER_symbolClass parameter_class;
		public MOJOSHADER_symbolType parameter_type;
		public uint rows;
		public uint columns;
		public uint elements;
		public uint member_count;
		public IntPtr members; // MOJOSHADER_symbolStructMember*
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_symbolStructMember
	{
		public IntPtr name; //const char*
		public MOJOSHADER_symbolTypeInfo info;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_symbol
	{
		public IntPtr name; // const char*
		public MOJOSHADER_symbolRegisterSet register_set;
		public uint register_index;
		public uint register_count;
		public MOJOSHADER_symbolTypeInfo info;
	}

	public const int MOJOSHADER_POSITION_NONE =	-3;
	public const int MOJOSHADER_POSITION_BEFORE =	-2;
	public const int MOJOSHADER_POSITION_AFTER =	-1;
	
	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_error
	{
		public IntPtr error; // const char*
		public IntPtr filename; // const char*
		public int error_position;
	}

	public enum MOJOSHADER_preshaderOpcode
	{
		MOJOSHADER_PRESHADEROP_NOP,
		MOJOSHADER_PRESHADEROP_MOV,
		MOJOSHADER_PRESHADEROP_NEG,
		MOJOSHADER_PRESHADEROP_RCP,
		MOJOSHADER_PRESHADEROP_FRC,
		MOJOSHADER_PRESHADEROP_EXP,
		MOJOSHADER_PRESHADEROP_LOG,
		MOJOSHADER_PRESHADEROP_RSQ,
		MOJOSHADER_PRESHADEROP_SIN,
		MOJOSHADER_PRESHADEROP_COS,
		MOJOSHADER_PRESHADEROP_ASIN,
		MOJOSHADER_PRESHADEROP_ACOS,
		MOJOSHADER_PRESHADEROP_ATAN,
		MOJOSHADER_PRESHADEROP_MIN,
		MOJOSHADER_PRESHADEROP_MAX,
		MOJOSHADER_PRESHADEROP_LT,
		MOJOSHADER_PRESHADEROP_GE,
		MOJOSHADER_PRESHADEROP_ADD,
		MOJOSHADER_PRESHADEROP_MUL,
		MOJOSHADER_PRESHADEROP_ATAN2,
		MOJOSHADER_PRESHADEROP_DIV,
		MOJOSHADER_PRESHADEROP_CMP,
		MOJOSHADER_PRESHADEROP_MOVC,
		MOJOSHADER_PRESHADEROP_DOT,
		MOJOSHADER_PRESHADEROP_NOISE,
		MOJOSHADER_PRESHADEROP_SCALAR_OPS,
		MOJOSHADER_PRESHADEROP_MIN_SCALAR = MOJOSHADER_PRESHADEROP_SCALAR_OPS,
		MOJOSHADER_PRESHADEROP_MAX_SCALAR,
		MOJOSHADER_PRESHADEROP_LT_SCALAR,
		MOJOSHADER_PRESHADEROP_GE_SCALAR,
		MOJOSHADER_PRESHADEROP_ADD_SCALAR,
		MOJOSHADER_PRESHADEROP_MUL_SCALAR,
		MOJOSHADER_PRESHADEROP_ATAN2_SCALAR,
		MOJOSHADER_PRESHADEROP_DIV_SCALAR,
		MOJOSHADER_PRESHADEROP_DOT_SCALAR,
		MOJOSHADER_PRESHADEROP_NOISE_SCALAR
	}

	public enum MOJOSHADER_preshaderOperandType
	{
		MOJOSHADER_PRESHADEROPERAND_INPUT,
		MOJOSHADER_PRESHADEROPERAND_OUTPUT,
		MOJOSHADER_PRESHADEROPERAND_LITERAL,
		MOJOSHADER_PRESHADEROPERAND_TEMP
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_preshaderOperand
	{
		public MOJOSHADER_preshaderOperandType type;
		public uint index;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct MOJOSHADER_preshaderInstruction
	{
		public MOJOSHADER_preshaderOpcode opcode;
		public uint element_count;
		public uint operand_count;
		// FIXME: public fixed MOJOSHADER_preshaderOperand operands[4];
		public MOJOSHADER_preshaderOperand operand1;
		public MOJOSHADER_preshaderOperand operand2;
		public MOJOSHADER_preshaderOperand operand3;
		public MOJOSHADER_preshaderOperand operand4;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_preshader
	{
		public uint literal_count;
		public IntPtr literals; // double*
		public uint temp_count;
		public uint symbol_count;
		public IntPtr symbols; // MOJOSHADER_symbol*
		public uint instruction_count;
		public IntPtr instructions; // MOJOSHADER_preshaderInstruction*
		public uint register_count;
		public IntPtr registers; // float*
		public IntPtr malloc; // MOJOSHADER_malloc
		public IntPtr free; // MOJOSHADER_free
		public IntPtr malloc_data; // void*
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct MOJOSHADER_parseData
	{
		public int error_count;
		public IntPtr errors; // MOJOSHADER_errors*
		public IntPtr profile; // const char*
		public IntPtr output; // const char*
		public int output_len;
		public int instruction_count;
		public MOJOSHADER_shaderType shader_type;
		public int major_ver;
		public int minor_ver;
		public IntPtr mainfn; // const char*
		public int uniform_count;
		public IntPtr uniforms; // MOJOSHADER_uniform*
		public int constant_count;
		public int sampler_count;
		public IntPtr samplers; // MOJOSHADER_sampler*
		public int attribute_count;
		public IntPtr attributes; // MOJOSHADER_attribute*
		public int output_count;
		public IntPtr outputs; // MOJOSHADER_attributes*
		public int swizzle_count;
		public IntPtr swizzles; // MOJOSHADER_swizzle*
		public int symbol_count;
		public IntPtr symbols; // MOJOSHADER_symbols*
		public IntPtr preshader; // MOJOSHADER_preshader*
		public IntPtr malloc; // MOJOSHADER_malloc
		public IntPtr free; // MOJOSHADER_free
		public IntPtr malloc_data; // void*
	}
